crates/sui/tests/snapshots/shell_tests__sui_move_new_tests__gitignore_has_build.sh.snap
---
source: crates/sui/tests/shell_tests.rs
description: tests/shell_tests/sui_move_new_tests/gitignore_has_build.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# SPDX-License-Identifier: Apache-2.0

# sui move new example when `example/.gitignore` already contains build/*; it should be unchanged
mkdir example
echo "ignore1" >> example/.gitignore
echo "build/*" >> example/.gitignore
echo "ignore2" >> example/.gitignore
bfc move new example
cat example/.gitignore
echo
echo ==== files in example/ ====
ls -A example

----- results -----
success: true
exit_code: 0
----- stdout -----
build/*
ignore1
build/*
ignore2

==== files in example/ ====
.gitignore
Move.lock
Move.toml
build
sources
tests

----- stderr -----
mkdir: example: File exists
