crates/sui/tests/snapshots/shell_tests__sui_move_new_tests__new_files.sh.snap
---
source: crates/sui/tests/shell_tests.rs
description: tests/shell_tests/sui_move_new_tests/new_files.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# SPDX-License-Identifier: Apache-2.0

# basic test that bfc move new outputs correct files
bfc move new example
#echo ==== files in project ====
ls -A example
#echo ==== files in sources ====
ls -A example/sources
#echo ==== files in tests =====
ls -A example/tests

----- results -----
success: true
exit_code: 0
----- stdout -----
.gitignore
Move.lock
Move.toml
build
sources
tests
example.move
example_tests.move

----- stderr -----
