crates/sui/tests/snapshots/shell_tests__sui_move_new_tests__new_then_build.sh.snap
---
source: crates/sui/tests/shell_tests.rs
description: tests/shell_tests/sui_move_new_tests/new_then_build.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# SPDX-License-Identifier: Apache-2.0

# tests that sui move new followed by sui move build succeeds

bfc move new example
cd example && bfc move build

----- results -----
success: false
exit_code: 1
----- stdout -----
Failed to build Move modules: Failed to resolve dependencies for package 'example'

Caused by:
    0: Fetching 'BfcSystem'
    1: Failed to reset to latest Git state 'a4786abc9d4d' for package 'BfcSystem', to skip set --skip-fetch-latest-git-deps | Exit status: exit status: 128.

----- stderr -----
UPDATING GIT DEPENDENCY https://github.com/MystenLabs/sui.git
