crates/sui/tests/snapshots/shell_tests__sui_move_new_tests__new_then_disassemble.sh.snap
---
source: crates/sui/tests/shell_tests.rs
description: tests/shell_tests/sui_move_new_tests/new_then_disassemble.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# SPDX-License-Identifier: Apache-2.0

# tests that sui move new followed by sui move disassemble succeeds


bfc move new example
cat > example/sources/example.move <<EOF
module example::example;

public fun foo(_ctx: &mut TxContext) {}
EOF
cd example

echo "=== Build ===" | tee /dev/stderr
bfc move build

echo "=== Disassemble ===" | tee /dev/stderr
bfc move disassemble build/example/bytecode_modules/example.mv

----- results -----
success: true
exit_code: 0
----- stdout -----
=== Build ===
=== Disassemble ===
// Move bytecode v6
module 0.example {
use 0000000000000000000000000000000000000000000000000000000000000002::tx_context;

public foo(_ctx#0#0: &mut TxContext) {
B0:
	0: Ret
}

}


----- stderr -----
=== Build ===
[note] Dependencies on BfcSystem, Bridge, MoveStdlib, Sui, and SuiSystem are automatically added, but this feature is disabled for your package because you have explicitly included dependencies on Sui. Consider removing these dependencies from Move.toml.
UPDATING GIT DEPENDENCY https://github.com/benfenorg/bfc.git
INCLUDING DEPENDENCY Sui
INCLUDING DEPENDENCY MoveStdlib
BUILDING example
=== Disassemble ===
[note] Dependencies on BfcSystem, Bridge, MoveStdlib, Sui, and SuiSystem are automatically added, but this feature is disabled for your package because you have explicitly included dependencies on Sui. Consider removing these dependencies from Move.toml.
