crates/sui/tests/snapshots/shell_tests__sui_move_new_tests__new_then_test.sh.snap
---
source: crates/sui/tests/shell_tests.rs
description: tests/shell_tests/sui_move_new_tests/new_then_test.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# SPDX-License-Identifier: Apache-2.0

# check that sui move new followed by sui move test succeeds
sui move new example
cd example && sui move test

----- results -----
success: false
exit_code: 1
----- stdout -----

----- stderr -----
new_then_test.sh: line 5: sui: command not found
new_then_test.sh: line 6: cd: example: No such file or directory
